# ldata

./: .gitignore  README.md  pyproject.toml
ldata/: __init__.py  benchmark.py  dataset.py  experiment.py
ldata/compositional_generalization/: __init__.py
ldata/logical_reasoning/: __init__.py
ldata/math_reasoning/: GSM8K.py  __init__.py  linear_system_complex.py  linear_system_math.py  number_list_sorting.py  ordered_list_results.py  sorted_list_results.py
ldata/method_integrations/: __init__.py  recursive_prompting.py
ldata/programming/: __init__.py  apps.py
ldata/protocols/: __init__.py  logger.py
ldata/qa/: __init__.py  city_continent_count.py
ldata/symbolic_manipulation/: __init__.py  concat_reversal.py  double_list_reversal.py  length_reversal.py  letter_concatenation.py  list_reversal.py
ldata/types/: __init__.py  evaluation.py
ldata/utils/: __init__.py  constants.py  context_managers.py  csv.py  data_getters.py  operations.py  security.py  strings.py
